--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="firstSection">
             <div class="leftSection">
                 Hi, My name is Avnish
-                <div>and I am a Web Developer</div>
+                <div>and I am a Web Developer.</div>
             </div>
             <div class="rightSection">right</div>
         </section>
