--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             font-size: 1.01rem;
         }
 
-        main hr{
+        main hr {
             border: 0;
             background: #9c97f1;
             height: 1px;
@@ -81,16 +81,41 @@
             width: 80%;
         }
 
-        .purple {
+        .text-purple {
             color: rgb(170, 107, 228);
+        }
+
+        .text-gray {
+            color: gray;
         }
 
         #element {
             color: rgb(170, 107, 228);
         }
-        .secondSection{
+
+        .secondSection {
             max-width: 80vw;
             margin: auto;
+            height: 80vh;
+        }
+
+        .secondSection h1{
+            font-size: 1.9rem;
+        }
+
+        .secondSection .box{
+            background-color: white;
+            width: 80vw;
+            height: 2px;
+            margin: 56px 0;
+            display: flex;
+        }
+
+        .secondSection .box .vertical{
+            background-color: white;
+            width: 1px;
+            height: 93px;
+            margin: 0 100px;
         }
     </style>
 </head>
@@ -114,7 +139,7 @@
     <main>
         <section class="firstSection">
             <div class="leftSection">
-                Hi, My name is <span class="purple">Avnish</span>
+                Hi, My name is <span class="text-purple">Avnish</span>
                 <div>and I am a Passionate</div>
                 <span id="element"></span>
             </div>
@@ -124,7 +149,22 @@
         </section>
         <hr>
         <section class="secondSection">
-            <h1>Past Experience</h1>
+            <span class="text-gray">What I have done so far</span>
+            <h1>Work Experience</h1>
+            <div class="box">
+                <div class="vertical">
+                    <img class="image-top" src="bg.png" alt="">
+                    <div class="vertical-title">
+                        HTML Developer (2010-2012)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
+                    </div>
+                </div>
+                <div class="vertical"></div>
+                <div class="vertical"></div>
+                <div class="vertical"></div>
+            </div>
         </section>
     </main>
 
