--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
             font-size: 2.4rem;
         }
 
+        .leftSection .btn {
+            padding: 12px;
+            background: #1e2167;
+            color: white;
+            border: 2px solid white;
+            border-radius: 6px;
+            font-size: 17px;
+            cursor: pointer;
+        }
+
+        .leftSection .buttons{
+            padding: 50px 0;
+        }
+
         .rightSection img {
             width: 80%;
         }
@@ -99,23 +113,69 @@
             height: 80vh;
         }
 
-        .secondSection h1{
+        .secondSection h1 {
             font-size: 1.9rem;
         }
 
-        .secondSection .box{
+        .secondSection .box {
             background-color: white;
-            width: 80vw;
+            width: 77vw;
             height: 2px;
             margin: 56px 0;
             display: flex;
         }
 
-        .secondSection .box .vertical{
+        .secondSection .box .vertical {
             background-color: white;
             width: 1px;
             height: 93px;
-            margin: 0 100px;
+            margin: 0 110px;
+        }
+
+        .image-top {
+            width: 23px;
+            position: relative;
+            top: -32px;
+            left: -9px;
+        }
+
+        .vertical-title {
+            position: relative;
+            top: 75px;
+            width: 150px;
+            font-size: 14px;
+        }
+
+        .vertical-desc {
+            position: relative;
+            top: 86px;
+            color: gray;
+            width: 150px;
+            font-size: 9px;
+        }
+
+        footer {
+            background-color: #0e0e1a;
+        }
+
+        .footer {
+            display: flex;
+            padding: 23px 122px;
+            justify-content: space-evenly;
+        }
+
+        .footer ul {
+            list-style: none;
+        }
+
+        .footer>div {
+            width: 223px;
+        }
+
+        footer .footer-rights {
+            text-align: center;
+            color: gray;
+            padding: 12px 0;
         }
     </style>
 </head>
@@ -142,6 +202,10 @@
                 Hi, My name is <span class="text-purple">Avnish</span>
                 <div>and I am a Passionate</div>
                 <span id="element"></span>
+                <div class="buttons">
+                    <button class="btn">Download Resume</button>
+                    <button class="btn">Visit Github</button>
+                </div>
             </div>
             <div class="rightSection">
                 <img src="bg.png" alt="">
@@ -155,18 +219,91 @@
                 <div class="vertical">
                     <img class="image-top" src="bg.png" alt="">
                     <div class="vertical-title">
-                        HTML Developer (2010-2012)
+                        HTML Developer - Pintrest (2010-2012)
                     </div>
                     <div class="vertical-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt
+                        molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
                     </div>
                 </div>
-                <div class="vertical"></div>
-                <div class="vertical"></div>
-                <div class="vertical"></div>
+                <div class="vertical">
+                    <img class="image-top" src="bg.png" alt="">
+                    <div class="vertical-title">
+                        HTML Developer - YouTube (2010-2012)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt
+                        molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img class="image-top" src="bg.png" alt="">
+                    <div class="vertical-title">
+                        HTML Developer - Instagram (2010-2012)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt
+                        molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img class="image-top" src="bg.png" alt="">
+                    <div class="vertical-title">
+                        HTML Developer - Twitter (2010-2012)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt
+                        molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img class="image-top" src="bg.png" alt="">
+                    <div class="vertical-title">
+                        HTML Developer - Facebook (2010-2012)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium eum earum incidunt
+                        molestias. Velit commodi blanditiis fugit, totam repellat animi sit dolores?
+                    </div>
+                </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer">
+            <div class="footer-first">
+                <h3>Avnish Developer Portfolio</h3>
+            </div>
+            <div class="footer-second">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="footer-third">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="footer-fourth">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-rights">
+            Copyright &#169; avnishportfolio.com | All rights reserved
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- Setup and start animation! -->
